syntax = "proto3";

package ai.lzy.v1.iam;

import "ai/lzy/v1/iam/iam.proto";

option java_outer_classname = "LSS";
option java_package = "ai.lzy.v1.iam";

service LzySubjectService {
  rpc CreateSubject (CreateSubjectRequest) returns (Subject);

  rpc RemoveSubject (RemoveSubjectRequest) returns (RemoveSubjectResponse);

  rpc GetSubject (GetSubjectRequest) returns (Subject);

  rpc AddCredentials (AddCredentialsRequest) returns (AddCredentialsResponse);

  rpc RemoveCredentials (RemoveCredentialsRequest) returns (RemoveCredentialsResponse);

  rpc ListCredentials (ListCredentialsRequest) returns (ListCredentialsResponse);
}

message CreateSubjectRequest {
  string auth_provider = 1;             // github, ...
  string provider_subject_id = 2;       // github login, ...
  string type = 3;
}

message RemoveSubjectRequest {
  Subject subject = 1;
}

message RemoveSubjectResponse {
}

message GetSubjectRequest {
  string id = 1;
}

message AddCredentialsRequest {
  Subject subject = 1;
  Credentials credentials = 2;
}

message AddCredentialsResponse {
}

message RemoveCredentialsRequest {
  Subject subject = 1;
  string credentials_name = 2;
}

message RemoveCredentialsResponse {
}

message ListCredentialsRequest {
  Subject subject = 1;
}

message ListCredentialsResponse {
  repeated Credentials credentialsList = 1;
}
